--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,6 @@
         "default_popup": "popup.html"
     },
     "background": {
-        "scripts": [clipboard.js"]
+        "scripts": ["clipboard.js"]
     }
 }
