--- a/manifest.json
+++ b/manifest.json
@@ -9,11 +9,17 @@
         "clipboardWrite",
         "clipboardRead"
         ],
+    "content_scripts": [
+        {
+            "matches": ["<all_urls>"],
+            "js": ["copylisten.js"]
+        }
+    ],
     "browser_action": {
         "default_icon": "icon.png",
         "default_popup": "popup.html"
     },
     "background": {
-        "scripts": ["clipboard.js"]
+        "scripts": ["background.js", "clipboard.js"]
     }
 }
