Fixed the ordering of background scripts in the manifest

--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,7 @@
         "default_popup": "popup.html"
     },
     "background": {
-        "scripts": ["background.js", "clipboard.js"]
+        "scripts": ["clipboard.js", "background.js"]
     },
     "commands": {
         "back": {
