--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
     ],
     "browser_action": {
         "default_icon": "icon.png",
-        "default_popup": "popup.html"
+        "default_popup": "display.html"
     },
     "background": {
         "scripts": ["clipboard.js", "background.js"]
