--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,11 @@
     "name": "SaveMyClips",
     "description": "",
     "version": "1.0",
+    "icons": {
+        "16": "icon16.png",
+        "48": "icon48.png",
+        "128": "icon128.png"
+    },
 
     "permissions": [
         "clipboardWrite",
