Moved icons to a new folder

--- a/manifest.json
+++ b/manifest.json
@@ -5,9 +5,9 @@
     "description": "",
     "version": "1.0",
     "icons": {
-        "16": "icon16.png",
-        "48": "icon48.png",
-        "128": "icon128.png"
+        "16": "imgs/icon16.png",
+        "48": "imgs/icon48.png",
+        "128": "imgs/icon128.png"
     },
 
     "permissions": [
