--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 2,
 
     "name": "SaveMyClips",
-    "description": "",
+    "description": "SaveMyClips keeps track of things that you copy in your clipboard so you don't lose them.",
     "version": "1.0",
     "icons": {
         "16": "imgs/icon16.png",
