--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,7 @@
         }
     ],
     "browser_action": {
-        "default_icon": "icon.png",
+        "default_icon": "imgs/icon128.png",
         "default_popup": "display.html"
     },
     "background": {
